--- a/sources.conf
+++ b/sources.conf
@@ -1,5 +1,9 @@
-pastebin.com
-pastie.org.ru
-paste.org
-hackforums.net
-antichat.ru
+# These are new line separated domain names that you want to search against.
+# The domain names must be able to be indexed/spidered by Google.
+# Anything behind a hashtag like this line, will be ignored.
+# pastebin.com
+# pastie.org.ru
+# paste.org
+# hackforums.net
+# antichat.ru
+github.com
